--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^1.4.1",
     "marked": "^0.3.5",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-antd": "^0.4.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
